crates/kirin-derive-chumsky/src/codegen/pretty_print/snapshots/kirin_derive_chumsky__codegen__pretty_print__statement__tests__wrapper_namespace_pretty_print.snap
---
source: crates/kirin-derive-chumsky/src/codegen/pretty_print/statement.rs
expression: generate_pretty_print_code(input)
---
#[automatically_derived]
impl ::kirin::pretty::PrettyPrint for MyLanguage {
    fn namespaced_pretty_print<'a, __L: ::kirin::ir::Dialect + ::kirin::pretty::PrettyPrint>(
        &self,
        doc: &'a ::kirin::pretty::Document<'a, __L>,
        namespace: &[&str],
    ) -> ::kirin::pretty::ArenaDoc<'a>
    where
        __L::Type: ::core::fmt::Display,
    {
        use kirin::pretty::DocAllocator;
        match self {
            MyLanguage::Arith(inner) => {
                let mut __ns: ::std::vec::Vec<&str> = namespace.to_vec();
                __ns.push("arith");
                inner.namespaced_pretty_print(doc, &__ns)
            }
            MyLanguage::Cf(inner) => inner.namespaced_pretty_print(doc, namespace),
        }
    }
    fn prints_result_names(&self) -> bool {
        match self {
            MyLanguage::Arith(inner) => ::kirin::pretty::PrettyPrint::prints_result_names(inner),
            MyLanguage::Cf(inner) => ::kirin::pretty::PrettyPrint::prints_result_names(inner),
        }
    }
}
